manifests/deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo
    spec:
      containers:
      - image: ghcr.io/vfarcic/silly-demo:v1.5.129
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
        name: main
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            memory: '256Mi'
          requests:
            cpu: '125m'
            memory: '128Mi'
      shareProcessNamespace: true
