manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: silly-demo
spec:
  gatewayClassName: ngrok
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "mammoth-together-surely.ngrok-free.app"
      allowedRoutes:
        namespaces:
          from: All
